src/App.css
*{
  margin: 0;
  padding: 0;
  font-family: promo;
}

@font-face {
  font-family: promo;
  src: url(./static/fonts/PromoTest-Regular-BF63b7880272a33.otf);
}
@font-face {
  font-family: promo-medium;
  src: url(./static/fonts/PromoTest-Medium-BF63b78802b0fd1.otf);
}
@font-face {
  font-family: promo-normal;
  src: url(./static/fonts/PromoTest-Normal-BF63b78802deb68.otf);
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

main{
  width: 100%;
}
body{
  height: 100vh;
  /* background-color: #fefae0; */
}

/* button{
  width: 100px;
  /* height: 50px; */
/* } */


.promo-font{
  font-family: promo;
}
.promo-normal{
  font-family: promo-normal;
}
.logo-container{
  margin: 3rem;
  width: 30rem;
  height: auto;
}

.logo-container img{
  width: 100%;
  height: auto;
}

.home-container{
  /* background-color: #fefae0; */
  display: flex;
  flex-direction: column;
  align-items: center;
}
.container0{
  /* background-color: #faedcd; */
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  /* margin: 0 0; */
  /* padding: 0; */
}
.container1{
  /* background-color: #e9edc9; */
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.container2{
  /* background-color: #ccd5ae; */
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.container3{
  /* background-color: #D4a373; */
  display: flex;
  flex-direction: row;
  justify-content: center;
  color: white;
}
.container4{
  /* background-color: #F2debb; */
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.container5{
  /* background-color: #bdc79e; */
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.primary-color{
  background-color: #fefae0;
}
.secondary-color{
  background-color: #e9edc9;
}
.tertiary-color{
  background-color: #F2debb;
}
.white{
  background-color: white;
}
.white-text{
  color: white;
}
.off-white{
  background-color: hsl(0, 0%, 95%);
}
.flora-green{
  background-color: #79d9af;
}
.flora-green-text{
  color: #79d9af;
}

/* -------------- Nav ------------ */
Nav{
  font-weight: bold;
}
.nav-white-font{
  font-family: promo-medium;
  color: white;
}

/* ----------------AUTHENTICATION------------------ */
.signup-page{
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding-top: 5%;
}
.authentication-container{
  border-radius: 5px;
  padding: 3% 0 3%;
  border: solid lightgray 1px;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}


/* ------------- PlantSearch ---------- */
.search-header{
  height: 10vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 5vh 0 5vh;
}

.searchbar-container{
  width: 80vw;
}

Form.Control{
  width: 80vw;
}
.results-container{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin: 2% 0 0;
  /* background-color: #f8f9fa; */
  /* background-repeat: no-repeat;
  background-size: cover;
  background-repeat: no-repeat;
  background-size: cover;
  background-blend-mode: multiply;
  isolation: isolate; */
}

.plant-card{
  height: 50vh;
  width: 40vh;
  min-Width: 200px;
  margin: 5px;
  border: solid lightgray 1px;
  border-radius: 0;
}

.card-link{
  text-decoration: none;
}

/* --------------------SPECIES PAGE --------------------------*/

.species-header{
  margin: 2% 5% 2%;
}
.species-image-container{
  height: auto;
  /* background-size: contain;
  background-repeat: no-repeat;
  object-fit: contain; */
  max-width: 100%;
  max-height: 100%;
  overflow: hidden;
  /* background-color: grey; */
}
.species-image-container img{
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
}
/* .species-info-container{
  background-color: ;
} */

.grid-even-columns{
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr 2fr;
  margin: 0 5% 0;
}

@media only screen and (max-width: 550px){
  .grid-even-columns{
    display: grid;
    grid-template-columns: 1fr;
  }
}

/*--------------------- Profile Page ----------------------------------*/
.profile-head {
  transform: translateY(5rem)
}

.cover {
  background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
  background-size: cover;
  background-repeat: no-repeat
}

/* body {
  background: #654ea3;
  background: linear-gradient(to right, #e96443, #904e95);
  min-height: 100vh;
  overflow-x:hidden;
} */


/* ---------------- Error Handling ------------------ */

:root {
  --main-color: #ecf0f1;
  --point-color: #555;
  --size: 5px;
}

.loader {
	background-color: var(--main-color);
	overflow: hidden;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0; left: 0;
  display: flex;
  align-items: center;
  align-content: center; 
  justify-content: center;  
	z-index: 100000;
}

.loader__element {
  border-radius: 100%;
  border: var(--size) solid var(--point-color);
  margin: calc(var(--size)*2);
}

.loader__element:nth-child(1) {
  animation: preloader .6s ease-in-out alternate infinite;
}
.loader__element:nth-child(2) {
  animation: preloader .6s ease-in-out alternate .2s infinite;
}

.loader__element:nth-child(3) {
  animation: preloader .6s ease-in-out alternate .4s infinite;
}

@keyframes preloader {
  100% { transform: scale(2); }
}

